# affine-ollama-proxy

./: .dockerignore  .env.example  .gitignore  CI_CD_SETUP.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.archive/: proxy.py
.github/: BADGES.md  QUICKREF.md
.github/workflows/: docker-build-push.yml  test-and-coverage.yml
ollama-proxy-env/: pyvenv.cfg
src/ollama_proxy/: app.py  auth.py  config.py  dependencies.py  gateway.py  utils.py
src/ollama_proxy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ollama_proxy/routes/: __init__.py  chat.py  embeddings.py  health.py  messages.py  models.py  responses.py
src/ollama_proxy/services/: __init__.py  streaming.py
tests/: conftest.py  fakes.py  test_auth.py  test_dependencies.py  test_endpoints.py  test_streaming.py  test_utils.py
